--- a/assests/CSS/main.css
+++ b/assests/CSS/main.css
@@ -653,3 +653,18 @@ main #section-6 .container .row .col-right form{
         text-decoration: none;
     }
   }
+  ::-webkit-scrollbar{
+    width: 15px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color:white;
+  }
+  ::-webkit-scrollbar-thumb{
+    background-color: var(--main-color);
+    border-radius: 25px;
+    cursor: pointer;
+  }
+  ::-webkit-scrollbar-thumb:hover{
+    background-color: var(--secondry-color);
+  }
+  
